# wandelbots-nova

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CI_INVESTIGATION_FINDINGS.md  CLAUDE.md  DEV.md  README.md  TODO_SERVER_SPEED_RATIO.md  devportal.env.tpl  import.prof.txt  migration-guide-v2.mdx  nats.conf  nova_import_profile.html  nova_programs.db  pyproject.toml  ruff.toml  schema.json  skaffold.yaml  test_links.py  v1-api.yml  v2-api.yml
examples/your-nova-app/: .dockerignore  .env.example  .nova  Dockerfile  README.md  pyproject.toml  skaffold.env  skaffold.yaml
examples/your-nova-app/.github/: copilot-instructions.md
examples/your-nova-app/app/: __main__.py  register_programs.py
examples/your-nova-app/k8s/: app.yaml
examples/your-nova-app/programs/: start_here.py
examples/your-nova-app/your_nova_app/: __main__.py  app.py  register_programs.py  start_here.py
nova-python-app/: .gitignore  .nova  Dockerfile  README.md  pyproject.toml
nova-python-app/nova_python_app/: __main__.py
nova-python-app/nova_python_app/programs/: common_code.py  my_program.py  my_second_program.py
nova_policy/: DESIGN.md  FEATURE_MAP_DESIGN.md  README.md  __init__.py  adapters.py  client.py  executor.py  feature_map.py  gr00t_client.py  models.py  motion_group_extensions.py  nats_client.py  pid_jogging_session.py  policy_client.py  pyproject.toml  runner.py  types.py
nova_policy/examples/: execute_policy_on_dualarm.py  policy_service_ur10e_test.py  realtime_policy_ur10e_validation.py
nova_policy/examples/apps/: README.md
nova_policy/policy-service/: .nova  Dockerfile  README.md  pyproject.toml
nova_policy/policy-service/policy_service/: __main__.py  app_server.py  lerobot_inference_engine.py  models.py  observation_sources.py  runtime.py
nova_policy/tests/: mock_source.py  test_gr00t_client.py  test_integration.py  test_nats_client.py  test_policy.py  test_policy_client.py  test_policy_extension.py
nova_rerun_bridge/minimal_example/: README.md  main.py  pyproject.toml  test.py
novapolicy/: README.md  __init__.py  action_queue.py  chunking.py  estop.py  executor.py  io.py  policy_client.py  pyproject.toml  schema.py  types.py
novapolicy/cameras/: __init__.py  manager.py  protocol.py  webrtc.py
novapolicy/debug/: __init__.py  analyze_trajectory_trace.py  trajectory_trace.py
novapolicy/docs/: executor.md  gr00t.md  jogging.md  rerun.md  rtc.md  schema.md
novapolicy/examples/: execute_custom_policy_on_dual_arm.py  execute_gr00t_dual_arm.py  replay_lerobot_dataset_ur3.py  setup_cell.sh
novapolicy/examples/computed/: README.md  computed_action.py
novapolicy/examples/jogging/: jogging_dual_joint.py  jogging_dual_joint_chunked.py  jogging_dual_tcp.py  jogging_dual_tcp_chunked.py  jogging_single_joint.py  jogging_single_joint_chunked.py  jogging_single_tcp.py  jogging_single_tcp_chunked.py
novapolicy/examples/replay/: episode_000000.parquet  replay_episode.py
novapolicy/gr00t/: __init__.py  client.py  eef.py  rtc.py  transport.py
novapolicy/jogging/: __init__.py  clock.py  jogger.py  session.py  waypoint_session.py  waypoints.py
novapolicy/lerobot/: README.md  __init__.py  action_queue.py  analyze_trajectory_trace.py  client.py  codec.py  config.py  schema.py  transport.py
novapolicy/rerun/: __init__.py  action_chunk.py  blueprint.py  constants.py  images.py  kinematics.py  logger.py  observation.py  streaming.py  target_tracking.py
novapolicy/tests/api/: test_executor.py  test_gr00t_client.py  test_jogger.py  test_lerobot_client.py  test_policy_client.py  test_schema.py  test_waypoint_session.py
novapolicy/tests/integration/: test_estop_live.py  test_executor_live.py
novapolicy/tests/unit/: conftest.py  test_action_queue.py  test_camera_latest_frames.py  test_camera_previews.py  test_chunking.py  test_estop.py  test_io_writer.py  test_jogging_clock.py  test_jogging_state.py  test_lerobot_config.py  test_lerobot_schema.py  test_pose.py  test_rerun_logger.py  test_rtc.py  test_waypoints.py
policy/: DESIGN.md  FEATURE_MAP_DESIGN.md  JOGGING.md  README.md  __init__.py  _sdk.py  cameras.py  chunking.py  estop.py  executor.py  feature_map.py  gr00t_client.py  io.py  jogger.py  motion_session.py  nats_client.py  nats_wire.py  pid_jogging_session.py  policy_client.py  pose.py  profile_session.py  proposal.md  pyproject.toml  rerun_logger.py  ruff.toml  runner.py  schema.py  trajectory_session.py  types.py  velocity_controller.py
policy/benchmarks/: test_circular_waypoint_jogging.py  test_pid_tracking.py  test_tcp_tracking.py
policy/cameras/: __init__.py  _cameras.py  manager.py  protocol.py  webrtc.py
policy/docs/: EXECUTOR.md  GR00T.md  JOGGING.md  RTC.md  SCHEMA.md  executor.md  gr00t.md  jogging.md  rerun.md  review-guide.md  rtc.md  schema.md
policy/examples/: debug_snapback.py  execute_custom_policy_clone.py  execute_custom_policy_on_dual_arm.py  execute_gr00t_dual_arm.py  execute_groot_dual_arm.py  execute_groot_single_arm.py  execute_policy_on_dualarm.py  execute_tcp_policy.py  jogging_dual_arm.py  jogging_dualarm.py  replay_episode.py  test_rtc_server_support.py
policy/gr00t/: README.md  __init__.py  client.py  eef.py  rtc.py
policy/groot/: README.md  __init__.py  client.py
policy/jogging/: __init__.py  action_queue.py  clock.py  jogger.py  session.py  velocity_profile.py  waypoint_session.py  waypoints.py
policy/nats/: README.md  __init__.py  client.py
policy/pidjogging/: __init__.py  action_queue.py  session.py  velocity_controller.py
policy/rerun/: README.md  __init__.py  action_chunk.py  blueprint.py  constants.py  images.py  logger.py  observation.py  streaming.py
policy/tests/: mock_source.py  test_action_queue.py  test_chunking.py  test_estop.py  test_executor.py  test_feature_map.py  test_gr00t_client.py  test_integration.py  test_io_writer.py  test_jogger.py  test_jogging_state.py  test_nats_client.py  test_pid_session.py  test_policy.py  test_pose.py  test_rtc.py  test_schema.py  test_single_step_pid.py  test_single_step_tcp.py  test_velocity_controller.py
(+1098 files in other folders)
