[project]
name = "wandelbots-nova"
version = "5.9.0"
description = "Official Python SDK for the Wandelbots Nova"
authors = [
    { name = "Wandelbots GmbH" },
    { name = "Christoph Biering", email = "christoph.biering@wandelbots.com" },
    { name = "Mahsum Demir", email = "mahsum.demir@wandelbots.com" },
    { name = "Dirk Sonnemann", email = "dirk.sonnemann@wandelbots.com" },
    { name = "Andreas Langenhagen", email = "andreas.langenhagen@wandelbots.com" },
    { name = "Stefan Wagner", email = "stefan.wagner@wandelbots.com" },
    { name = "André Kühnert", email = "andre.kuhnert@wandelbots.com" },
]
requires-python = ">=3.11, <3.13"
readme = "README.md"
dependencies = [
    "httpx>=0.28.0,<0.29",
    "wandelbots_api_client==26.5.1",
    "websockets>=14.1.0,<15",
    "loguru>=0.7.2,<0.8",
    "pydantic>=2.11.4,<3",
    "python-decouple~=3.8",
    "scipy>=1.14.1,<2",
    "aiostream>=0.6.4,<0.7",
    "anyio>=4.8.0,<5",
    "asyncstdlib>=3.13.0,<4",
    "numpy>1.1.19",
    "asyncua>=1.1.5,<2",
    "docstring-parser>=0.16.0",
    "exceptiongroup>=1.2.2",
    "nats-py>=2.11.0",
    "blinker>=1.9.0",
    "python-statemachine==3.2.0",
    "msgpack>=1.2.1",
    "pillow>=12.3.0",
]

[project.optional-dependencies]
nova-rerun-bridge = [
    "rerun-sdk==0.34.0",
    "requests>=2.32.3",
    "APScheduler>=3.11.0",
    "trimesh>=4.5.3",
]
wandelscript = [
    "aiostream>=0.6.1,<0.7",
    "antlr4-python3-runtime==4.13.2",
    "dotenv",
    "geometricalgebra>=0.1.3,<0.2",
    "typer>=0.12,<0.28",
    "numpy>=1.1.19",
]
novax = ["fastapi>=0.115.6", "uvicorn>=0.34.0", "python-decouple>=3.8"]
novapolicy = [
    "aiortc>=1.14.0",
    "msgpack>=1.1.0,<2",
    "Pillow>=10.0.0",
    "pyzmq>=26.0.0,<27",
    "requests>=2.33.1",
]
benchmark = [
    "rerun-sdk==0.34.0",
    "requests>=2.32.3",
    "APScheduler>=3.11.0",
    "trimesh>=4.5.3",
    "pyyaml>5.3",
]

[project.scripts]
download-models = "nova_rerun_bridge.helper_scripts.download_models:update_robot_models"
create-motion-group-models = "nova.helper_scripts.create_motion_group_models:update_motion_group_models"
wandelscript = "wandelscript.cli:app"
ws = "wandelscript.cli:app"






















[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "hypothesis>=6.100.0",
    "pre-commit>=4.3.0",
    "icecream>=2.1.5",
    "ipython<10",
    "freezegun>=1.5.5",
    "pyinstrument>=5.1.1",
    "glom>=24.11.0",
    "pytest-xdist>=3.8.0",
    "ty>=0.0.53",
    "pytest-timeout>=2.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["nova", "nova_rerun_bridge", "wandelscript", "novax", "novapolicy"]

[tool.hatch.build.targets.wheel]
include = ["nova", "nova_rerun_bridge", "wandelscript", "novax", "novapolicy"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = """
    --doctest-modules
    --junitxml=reports/pytest.xml
    --import-mode=importlib
    --timeout=300
    --timeout-method=thread"""
junit_family = "xunit2"
norecursedirs = "develop .ipynb_checkpoints .venv .tox *.egg"
testpaths = """
    nova
    wandelscript
    tests
"""
markers = """
    integration: mark a test as requiring a running Nova instance
    xdist_group(name): group tests that needs to run sequentially
"""


[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["nova", "examples", "tests", "wandelscript", "novax", "nova_rerun_bridge"]
exclude = [
    "wandelscript/grammar",
    "wandelscript/motions.py",
    "wandelscript/builtins/fs.py",
    "wandelscript/metamodel.py",
]

[tool.ty.terminal]
output-format = "concise"

# Test files exercise runtime behaviour (dynamic attributes, pydantic models,
# subclass-only members) that ty's static inference cannot follow but that mypy
# previously accepted. Relax the diverging rules for tests only; source code is
# still checked strictly.
[[tool.ty.overrides]]
include = ["tests/**", "wandelscript/tests/**", "**/test_*.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
not-subscriptable = "ignore"
unknown-argument = "ignore"
missing-argument = "ignore"
unsupported-operator = "ignore"
unused-type-ignore-comment = "ignore"

# Wandelscript is a dynamically typed DSL interpreter built on ANTLR. Its parse
# tree visitors and runtime datatypes rely on dynamic dispatch and metamodel
# attributes that ty's static inference cannot follow (and which mypy already
# excluded for the metamodel/motions modules). Relax the diverging rules here.
[[tool.ty.overrides]]
include = ["wandelscript/**"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
invalid-await = "ignore"
invalid-return-type = "ignore"
call-non-callable = "ignore"
unused-type-ignore-comment = "ignore"

# Example scripts are illustrative samples rather than shipped library code, so
# the same runtime-dynamic relaxations as for tests apply.
[[tool.ty.overrides]]
include = ["examples/**", "nova_rerun_bridge/examples/**"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
missing-argument = "ignore"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
assets = []
build_command = "pip install uv && uv build"
build_command_env = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
no_git_verify = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []
mode = "init"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["chore", "feat", "fix"]
minor_tags = ["feat"]
patch_tags = ["fix", "chore"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true


[tool.ruff.lint.isort]
known-first-party = ["nova", "nova_rerun_bridge", "novax"]





















[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
