[project]
name = "nova_python_app"
version = "0.0.1"
description = ""
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "loguru>=0.7.2,<0.8",
    "python-decouple~=3.8",
    "requests>=2.32.3,<3",
    "uvicorn[standard]>=0.20.0", # Added uvicorn for serving FastAPI
    "ipython>=9.3.0",
    "dependency-injector>=4.42.0,<5.0.0",
    "wandelbots-nova[novax]",
]

[dependency-groups]
dev = [
    "pylint==2.17",
    "ruff>=0.11.9",
]

[tool.uv]
package = false

[tool.uv.sources]
wandelbots-nova = { path = ".." }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

