[project]
name = "nova-policy"
version = "0.1.0"
description = "PID-controlled jogging for policy execution on NOVA robots"
requires-python = ">=3.11"
dependencies = [
    "wandelbots-nova>=4.0.0,<5",
    "msgpack>=1.1.0,<2",
    "pyzmq>=26.0.0,<27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["nova_policy"]
