# Metadata for the policy extra package.
# This is NOT an independently installable package — it ships as part of
# wandelbots-nova and is activated via: pip install wandelbots-nova[policy]
#
# Dependencies are declared in the root pyproject.toml under
# [project.optional-dependencies] policy = [...]

[project]
name = "nova-policy"
version = "0.1.0-alpha"
description = "EXPERIMENTAL: PID-controlled jogging for policy execution on NOVA robots"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
