[project]
name = "your_nova_app"
version = "0.0.1"
description = ""
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "wandelbots-nova[novax,nova-rerun-bridge]>=3.5.3,<4",
    "python-decouple~=3.8",
    "requests>=2.32.3,<3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

