[project]
name = "policy_service"
version = "0.0.1"
description = ""
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "wandelbots-nova[novax,nova-rerun-bridge]>=4.0.0,<5",
    "python-decouple~=3.8",
    "requests>=2.32.3,<3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

