[project]
name = "policy_service"
version = "0.0.1"
description = ""
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn>=0.34.0,<1",
    "pydantic>=2.11.0,<3",
    "lerobot",
    "python-decouple~=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

