[project]
name = "mock_groot_policy_service"
version = "0.0.1"
description = "Stateless mock GR00T-compatible ZMQ inference service"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "python-decouple~=3.8",
    "msgpack>=1.1.0,<2",
    "pyzmq>=26.0.0,<27",
    "numpy>1.1.19",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
