[project]
name = "groot_dual_arm_controller"
version = "0.0.1"
description = "Nova app: GR00T dual-arm policy execution with cameras via ZMQ"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "wandelbots-nova>=5.1.0,<6",
    "python-decouple~=3.8",
    "pyzmq>=26.0.0,<27",
    "msgpack>=1.1.0,<2",
    "numpy>=1.26.0,<3",
    "aiortc>=1.9.0,<2",
    "requests>=2.31.0,<3",
    "opencv-python-headless>=4.9.0,<5",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
