[project]
name = "groot_robot_controller"
version = "0.0.1"
description = "Nova app that connects to a GR00T-style ZMQ policy service and controls two robots via PID jogging"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "wandelbots-nova>=4.0.0,<5",
    "python-decouple~=3.8",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
    "numpy>1.1.19",
    "msgpack>=1.1.0,<2",
    "pyzmq>=26.0.0,<27",
    "aiortc>=1.9.0,<2",
    "opencv-python-headless>=4.9.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
